--- a/content/sips/sip-2030.md
+++ b/content/sips/sip-2030.md
@@ -4,7 +4,7 @@ title: Add USDT to Perps V2
 network: Optimism
 status: Draft
 type: Governance
-author: Your GitHub Username (@yourgithubusername)
+author: Burt Rock (@BurtRock)
 created: 2023-08-05
 ---
 
