--- a/content/sips/sip-2030.md
+++ b/content/sips/sip-2030.md
@@ -66,33 +66,35 @@ Implementation requires adding the USDT trading pair to Perps V2. The off-chain 
 
 N/A
 
-### Configurable Values (Via SCCP)
+### Configurable Values
 
-All Perps V2 configurable values for the USDT market will be set in subsequent SCCPs.
+Market will be launched in an unpaused state with the following parameters:
 
 ```json
 {
-    "makerFee": "",
-    "takerFee": "",
-    "takerFeeDelayedOrder": "",
-    "makerFeeDelayedOrder": "",
-    "takerFeeOffchainDelayedOrder": "",
-    "makerFeeOffchainDelayedOrder": "",
-    "maxLeverage": "",
-    "maxMarketValue": "",
-    "maxFundingVelocity": "",
-    "skewScale": "",
-
-    "nextPriceConfirmWindow": "",
-    "delayedOrderConfirmWindow": "",
-    "minDelayTimeDelta": "",
-    "maxDelayTimeDelta": "",
-    "offchainDelayedOrderMinAge": "",
-    "offchainDelayedOrderMaxAge": "",
-    "offchainPriceDivergence": ""
+    "makerFee": "0.3",
+    "takerFee": "0.3",
+    "takerFeeDelayedOrder": "0.3",
+    "makerFeeDelayedOrder": "0.3",
+    "takerFeeOffchainDelayedOrder": "0.00015",
+    "makerFeeOffchainDelayedOrder": "0",
+    "nextPriceConfirmWindow": "2",
+    "delayedOrderConfirmWindow": "120",
+    "minDelayTimeDelta": "60",
+    "maxDelayTimeDelta": "6000",
+    "offchainDelayedOrderMinAge": "2",
+    "offchainDelayedOrderMaxAge": "60",
+    "maxLeverage": "55",
+    "maxMarketValue": "5000000",
+    "maxFundingVelocity": "3",
+    "skewScale": "10000000000",
+    "offchainPriceDivergence": "0.025",
+    "liquidationPremiumMultiplier": "1",
+    "liquidationBufferRatio": "0.0075",
+    "maxPD": "0.00015",
+    "maxLiquidationDelta": "0.0003",
 }
-
-
+```
 ## Copyright
 
 Copyright and related rights waived via [CC0](https://creativecommons.org/publicdomain/zero/1.0/).
